kind/apps/tc9-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tc9-service
  namespace: sigma
  labels:
    app: tc9-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tc9-pod
