kind/apps/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  namespace: sigma
  labels:
    app: ws-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ws-pod
