kind/apps/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tc-ingress
  namespace: sigma
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: ws-service
           port:
             number: 80
      - path: /tc9
        pathType: Prefix
        backend:
          service:
           name: tc9-service
           port:
             number: 80
      - path: /tc10
        pathType: Prefix
        backend:
          service:
           name: tc10-service
           port:
             number: 80
